# katm_sdk

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  prelude.rs
src/config/: katm_config.rs  mod.rs
src/enums/: language.rs  mod.rs  result_code.rs
src/error/: mod.rs  types.rs
src/errors/: katm_error.rs  mod.rs
tests/: config_tests.rs  errors_tests.rs
