[package]
name        = "katm_sdk"
version     = "0.1.0"
edition     = "2024"
authors     = ["Diyorbek Abdumutalibov <diordev@icloud.com>"]
license     = "MIT"
description = "KATM API uchun Rust SDK (Belt integratsiyasi uchun toza port/adapter arxitekturasi)"
repository  = "https://github.com/diordev/katm_sdk"

#----------------------------------Library Settings---------------------------
[lib]
# Library sifatida kompilyatsiya qilamiz (belt-gateway app ichida ishlatiladi)
crate-type = ["rlib"]

# ----------------------------------Features----------------------------------
[features]
# Default profil: rustls + http2 + json yoqilgan
default     = ["tls-rustls", "http2", "json"]

# TLS backend’lar (faqat bittasini yoqing; default rustls)
tls-rustls  = ["reqwest/rustls-tls"]

# JSON imkoniyatlari
json        = ["reqwest/json", "serde/derive"]

# HTTP/2 agar server qo‘llasa
http2       = ["reqwest/http2"]


# ----------------------------------Dependencies----------------------------------
[dependencies]
# ==== ASYNC RUNTIME ====
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
#  rt-multi-thread: yuqori yukda ko‘p yadrodan foydalanish
#  macros: async test va spawn makrolari
#  time: poll interval (sleep) uchun

# ==== HTTP CLIENT (TRANSPORT) ====
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
# default-features=false: native-tls o‘rniga rustls ishlatamiz (pure Rust, prod’da qulay)
# json: .json() bilan JSON serialize/deserialize
# http2, rustls-tls: default feature set (features orqali boshqaramiz)

# ==== JSON / SERDE ====
serde      = { version = "1.0", features = ["derive"] }     # DTO’lar uchun #[derive(Serialize, Deserialize)]
serde_json = "1.0"                                          # JSON parse/serialize

# ==== XML PARSING (REPORT uchun) ====
quick-xml = { version = "0.36", features = ["serialize"] }
# serialize: serde bilan XML ↔ struct (Report XML’ini semantik parse qilish uchun)

# ==== ERROR MODELLASH (toza SDK xatolari) ====
thiserror = "1.0"

# ==== BASE64 (reportBase64 decode uchun) ====
base64 = "0.22"

# ==== UTILITIES (foydali, lekin yengil) ====
http  = "1.1"     # StatusCode, HeaderName/Value tiplari (kerak bo‘lsa)
bytes = "1.6"     # Katta payloadlar bilan ishlash uchun (ixtiyoriy)
url   = "2.5"     # URL qurish/tekshirish (ixtiyoriy)
time  = { version = "0.3", features = ["parsing", "formatting", "macros"] }
# time: KATM sanalari (ISO 8601) bilan ishlash (parse/format)

# Trait ichida async metodlar uchun ergonomic macro
async-trait = "0.1"

# ----------------------------------Dev-Dependencies----------------------------------
[dev-dependencies]
# Testlar uchun runtime + JSON + XML
tokio       = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
serde_json  = "1.0"
quick-xml   = { version = "0.36", features = ["serialize"] }
# Agar parametrli test xohlasangiz:
# rstest = "0.21"

# ----------------------------------Metadata----------------------------------
[package.metadata.docs.rs]
# docs.rs build paytida runtime talab qilmasin
all-features = true
