[package]
name        = "katm_sdk"
version     = "0.1.0"
edition     = "2024"
authors     = ["Diyorbek Abdumutalibov <diordev@icloud.com>"]
license     = "MIT"
description = "KATM API uchun Rust SDK (Belt integratsiyasi uchun toza port/adapter arxitekturasi)"
repository  = "https://github.com/diordev/katm_sdk"

#----------------------------------Library Settings---------------------------
[lib]
# Library sifatida kompilyatsiya qilamiz (belt-gateway app ichida ishlatiladi)
crate-type = ["rlib"]

# ----------------------------------Features----------------------------------
[features]
# Default profil: rustls + http2 + json yoqilgan
default     = ["tls-rustls", "http2", "json"]

# TLS backend’lar (faqat bittasini yoqing; default rustls)
tls-rustls  = ["reqwest/rustls-tls"]
tls-native  = ["reqwest/native-tls"]

# JSON imkoniyatlari
json        = ["reqwest/json"]        # serde/derive allaqachon dependencies’da yoqilgan

# HTTP/2 agar server qo‘llasa
http2       = ["reqwest/http2"]

# ----------------------------------Dependencies----------------------------------
[dependencies]
# ==== ASYNC RUNTIME ====
tokio = { version = "1.47.1", features = ["full","rt-multi-thread", "macros", "time"] }

# ==== HTTP CLIENT (TRANSPORT) ====
# reqwest feature’larini endi faqat [features] orqali boshqaramiz
reqwest = { version = "0.12.23", default-features = false, features = [] }

# ==== JSON / SERDE ====
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# ==== XML PARSING (REPORT uchun) ====
quick-xml = { version = "0.38.2", features = ["serialize"] }

# ==== ERROR MODELLASH (toza SDK xatolari) ====
thiserror = "2.0.16"

# ==== BASE64 (reportBase64 decode uchun) ====
base64 = "0.22.1"

# ==== UTILITIES (foydali, lekin yengil) ====
http  = "1.3.1"      # StatusCode, header tiplari
bytes = "1.10.1"     # Katta payloadlar
url   = "2.5.7"      # URL qurish/tekshirish
time  = { version = "0.3.41", features = ["parsing", "formatting", "macros"] }

# Trait ichida async metodlar uchun ergonomic macro
async-trait = "0.1.89"

# ----------------------------------Dev-Dependencies----------------------------------
[dev-dependencies]
tokio       = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros", "time"] }
serde_json  = "1.0.143"
quick-xml   = { version = "0.38.2", features = ["serialize"] }
# rstest = "0.21"

# ----------------------------------Metadata----------------------------------
[package.metadata.docs.rs]
# docs.rs build paytida runtime talab qilmasin
all-features = true
